Changed in version 0.7.5.0:
   * Add the new function `fallbackCompletion` to combine
     multiple `CompletionFunc`s
   * Fix warnings
   * Bump the lower bound to ghc-8.0

Changed in version 0.7.4.3:
   * Bump upper bounds on base, containers, stm and unix
   * Fix redundant "Category" field in haskeline.cabal

Changed in version 0.7.4.2:
   * Clean up the rest of the references to trac.haskell.org

Changed in version 0.7.4.1:
   * Bump upper bound on base to support ghc-8.4
   * Use `TChan` from `stm` rather than `Chan`
   * Update the homepage since trac.haskell.org has shut down

Changed in version 0.7.4.0:
   * Properly process Unicode key events on Windows.
   * Add an instance MonadExcept IdentityT.
   * Remove custom Setup logic to support Cabal 2.0.

Changed in version 0.7.3.1:
   * Properly disable echoing in getPassword when running in MinTTY.
   * Use `cast` from Data.Typeable instead of Data.Dynamic.

Changed in version 0.7.3.0:
   * Require ghc version of at least 7.4.1, and clean up obsolete code
   * Add thread-safe (in terminal-style interaction) external print function
   * Add a MonadFix instance for InputT
   * Bump upper bounds on `base` and `directory` to support ghc-8.0.2

Changed in version 0.7.2.3:
   * Fix hsc2hs-related warning on ghc-8
   * Fix the behavior of ctrl-W in the emacs bindings
   * Point to github instead of trac

Changed in version 0.7.2.2:
   * Fix Linux to Windows cross-compile
   * Canonicalize AMP instances to make the code more future proof
   * Generalize constraints for InputT instances
   * Bump upper bounds on base and transformers
   * Make Haskeline `-Wtabs` clean

Changed in version 0.7.2.1:
   * Fix build on Windows.

Changed in version 0.7.2.0:
   * Bump upper-bound on base and filepath libraries to accomodate GHC HEAD (7.10)
   * Drop Cabal dependency to 1.10
   * Use explicit forall syntax to avoid warning
   * Support Applicative/Monad proposal in Win32/Draw backend
   * Add Eq/Ord instances to Completion